# ChangeLog for mail-client/claws-mail-mailmbox
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/ChangeLog,v 1.5 2007/01/31 19:34:18 corsair Exp $

  31 Jan 2007; Markus Rothe <corsair@gentoo.org>
  claws-mail-mailmbox-1.12.3.ebuild:
  Stable on ppc64; bug #163611

  29 Jan 2007; Jason Wever <weeve@gentoo.org>
  claws-mail-mailmbox-1.12.3.ebuild:
  Stable on SPARC wrt bug #163611.

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  claws-mail-mailmbox-1.12.3.ebuild:
  stable x86; bug #163611

*claws-mail-mailmbox-1.12.4 (09 Jan 2007)

  09 Jan 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-mailmbox-1.12.4.ebuild:
  Version bump.

*claws-mail-mailmbox-1.12.3 (19 Dec 2006)

  19 Dec 2006; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  +claws-mail-mailmbox-1.12.3.ebuild:
  This is the new name of mail-client/sylpheed-claws-mailmbox.
