@@ -1,0 +1,24 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/Attic/claws-mail-mailmbox-1.13.ebuild,v 1.1 2007/04/16 13:06:17 ticho Exp $
+
+MY_P="${P#claws-mail-}"
+
+DESCRIPTION="Plugin for sylpheed-claws to operate on mbox type mailboxes"
+HOMEPAGE="http://www.claws-mail.org"
+SRC_URI="http://www.claws-mail.org/downloads/plugins/${MY_P}.tar.gz"
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+DEPEND=">=mail-client/claws-mail-2.8.0"
+
+S="${WORKDIR}/${MY_P}"
+
+src_install() {
+	make DESTDIR="${D}" install
+	dodoc AUTHORS ChangeLog NEWS README
+
+	# kill useless files
+	rm -f ${D}/usr/lib*/claws-mail/plugins/*.{a,la}
+}
