@@ -1,0 +1,3 @@
+MD5 13a91cfd9b26182edbbdcd2a0d27c80f mailmbox-1.13.tar.gz 395808
+RMD160 9033684950b671d2fc8d669b43cc3b3abac71700 mailmbox-1.13.tar.gz 395808
+SHA256 e41470fbea5322aabdca21b3ee7ebc2b3ddb1638d25902ee96fcb10698b35dd4 mailmbox-1.13.tar.gz 395808
