@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/claws-mail-mailmbox
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/ChangeLog,v 1.5 2007/01/31 19:34:18 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-mailmbox/ChangeLog,v 1.6 2007/04/16 13:06:17 ticho Exp $
+
+*claws-mail-mailmbox-1.13 (16 Apr 2007)
+
+  16 Apr 2007; Andrej Kacian <ticho@gentoo.org>
+  +claws-mail-mailmbox-1.13.ebuild:
+  Version bump.
 
   31 Jan 2007; Markus Rothe <corsair@gentoo.org>
   claws-mail-mailmbox-1.12.3.ebuild:
